objects/Quote_Summary__c.object
<CustomObject>
    <fields>
        <fullName>ABC_in_Clase_Date__c</fullName>
        <label>ABC in Clase Date</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABC_log_detail__c</fullName>
        <description>log for abc</description>
        <label>ABC log detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quote_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adhoc_Create_LDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adhoc Create LDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AmmendmentType_Amd2__c</fullName>
        <label>Ammendment Type for Amended Quote</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ammendment__c</fullName>
        <label>Amendment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lessee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Escalation__c</fullName>
        <label>Annual Escalation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avoided_Cost_of_Power__c</fullName>
        <label>Avoided Cost of Power</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPR_Company_ID__c</fullName>
        <externalId>true</externalId>
        <label>CPR Company ID</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPR_License_ID__c</fullName>
        <externalId>true</externalId>
        <label>CPR License ID</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPR_QuoteID__c</fullName>
        <externalId>true</externalId>
        <label>CPR QuoteID</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Reason for Amendment/Revision</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Construction_CEILING_Dealer_Fees_x_0_60__c</fullName>
        <formula>CEILING( Total_System_Price_Dealer_Cost__c *0.6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Construction(CEILING(Dealer Fees x 0.60)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Copy__c</fullName>
        <description>To clone locked quote in EDDiE</description>
        <formula>IF( AND( OR(ISPICKVAL(Locked_Scenario__r.Quote_Wizard__c, &apos;Manual Mode&apos;),ISPICKVAL(Locked_Scenario__r.Quote_Wizard__c, &apos;Dynamic Mode&apos;) ),  Locked_Scenario__r.Is_Locked__c  = True), HYPERLINK(&quot;/apex/DynamicProposal?quoteId=&quot;+ CASESAFEID(Locked_Scenario__c)+&quot;&amp;action=copy&amp;quoteWizard=Manual Mode&quot; ,image(&quot;/servlet/servlet.FileDownload?file=015340000022irF&quot;, &quot;Copy Quote Details&quot;), &quot;_blank&quot;), &apos;Not a valid option&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Quote Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Amendment_Doc__c</fullName>
        <formula>IF(  AND( ISPICKVAL( Ammendment__c , &apos;&apos; ) ,  Locked_Scenario__r.Lease_Doc_Signed__c = TRUE ,  Locked_Scenario__r.AmmendmentType_AmdQuote__c  &lt;&gt; &apos;&apos; ) ,  Locked_Scenario__r.Create_Amendment_Doc__c , &apos;&apos;  )</formula>
        <label>Create Amendment Doc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Amendments__c</fullName>
        <description>Pivotal #146046753 - New Change Order button to create a new quote based on the current details of this one to be used as the basis for an amendment.</description>
        <formula>IF(Locked_Scenario__r.Quote_Status__c = &apos;Active&apos; &amp;&amp; Locked_Scenario__r.Is_Locked__c &amp;&amp; NOT(ISBLANK(Locked_Scenario__r.Amended_Lease__c)) &amp;&amp; NOT(Locked_Scenario__r.Lease_Doc_Signed__c),  HYPERLINK(&apos;/apex/AgreementConfirmation?QuoteId=&apos;&amp;Locked_Scenario__c, IMAGE(&apos;servlet/servlet.FileDownload?file=01580000001Mehl&apos;,&apos;Create Amendment Doc&apos;)), &apos;&apos;)</formula>
        <label>Create Amendments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Cash_NTS__c</fullName>
        <formula>IF(AND(Locked_Scenario__r.Is_Locked__c,ISPICKVAL(Locked_Scenario__r.QuoteType__c,&quot;Cash&quot;),Locked_Scenario__r.Sector__c = &apos;New Homes&apos;),
HYPERLINK(&apos;apex/CreateCashNTS?Id=&apos;&amp;Locked_Scenario__r.Id+&apos;&amp;accId=&apos;&amp;Locked_Scenario__r.Account__c,image(&quot;/servlet/servlet.FileDownload?file=015340000028Led&quot;,&quot;_blank&quot;)),&apos;NTS is allowed for New Homes Cash Quotes.&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Cash NTS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Lease_Docs__c</fullName>
        <formula>IF(ISPICKVAL( Ammendment__c , &apos;&apos; ), Locked_Scenario__r.Create_Lease_Docs__c , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Contracts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Termination_Doc__c</fullName>
        <formula>Locked_Scenario__r.Create_Termination_Doc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Termination Doc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMDone__c</fullName>
        <label>DMDone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM__c</fullName>
        <label>DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Account__c</fullName>
        <formula>Account_Name__r.Partner_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Cost_Consumption_Monitoring_Kit__c</fullName>
        <label>Dealer Cost/Consumption Monitoring Kit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Cost_Inverters_Roof1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dealer Cost/Inverters Roof1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Cost_Inverters_Roof2__c</fullName>
        <label>Dealer Cost/Inverters Roof2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Cost_Inverters_Roof3__c</fullName>
        <label>Dealer Cost/Inverters Roof3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Cost_PV_Modules__c</fullName>
        <formula>(Module1_AC_rating__c + Module2_AC_rating__c + Module3_AC_rating__c + Module4_AC_rating__c) * 1000 *  Mount_calculation_factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Module1 AC rating + module2 AC rating + Module3 AC rating + Module4 AC rating)
* 1000
* Mount calculation factor inv1</inlineHelpText>
        <label>Dealer Cost PV Modules</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Installer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer/Installer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <formula>Dealer_Installer__r.FirstName &amp; &apos; &apos;&amp; Dealer_Installer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Down_Payment_A__c</fullName>
        <label>Down Payment_A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Down_Payment_B__c</fullName>
        <label>Down Payment_B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Down_Payment_C__c</fullName>
        <label>Down Payment_C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <label>Down Payment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit_Quote_in_CPR__c</fullName>
        <description>HYPERLINK(&quot;/apex/Quickquote? &amp;id=&quot; &amp; Id , &quot;Edit Quote Details&quot;, &quot;_blank&quot; )</description>
        <formula>IF(Locked_Scenario__r.Contractors_License__c=&apos;Y&apos;,IF( ISBLANK(TEXT(Locked_Scenario__r.Quote_Wizard__c)),HYPERLINK(&quot;/apex/QuoteReadOnly?id=&quot;+Locked_Scenario__r.Id, &quot;Edit Quote Details&quot;, &quot;_blank&quot;),HYPERLINK(&quot;/apex/DynamicProposal?quoteId=&quot;+ CASESAFEID(Locked_Scenario__c) +&quot;&amp;action=edit&amp;quoteWizard=&quot;+ TEXT(Locked_Scenario__r.Quote_Wizard__c), &quot;Edit Quote Details&quot;, &quot;_self&quot;)), &quot;QUOTE EDIT NOT ALLOWED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Quote Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equip_Cost_Consumption_Monitoring_Kit__c</fullName>
        <label>Equip Cost/Consumption Monitoring Kit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Cost_Inverters_Roof1__c</fullName>
        <label>Equipment Cost/Inverters Roof1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Cost_Inverters_Roof2__c</fullName>
        <label>Equipment Cost/Inverters Roof2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Cost_Inverters_Roof3__c</fullName>
        <label>Equipment Cost/Inverters Roof3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Cost_PV_Modules__c</fullName>
        <label>Equipment Cost/PV Modules</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escalator_A__c</fullName>
        <label>Escalator_A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Escalator_B__c</fullName>
        <label>Escalator_B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Escalator_C__c</fullName>
        <label>Escalator_C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <formula>Locked_Scenario__r.Code_Expiration_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Prepaid_Lease__c</fullName>
        <label>Full Prepaid Lease</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <inlineHelpText>Date of system installation</inlineHelpText>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection_Count__c</fullName>
        <label>Interconnection Count</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interconnection_DF_Origin_Const__c</fullName>
        <formula>CEILING(Total_System_Price_Dealer_Cost__c * 0.10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interconnection (DF - Origin - Const)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inv1_pvsim_no__c</fullName>
        <description>pvsim number coming from price list</description>
        <label>Inv1 pvsim no</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv2_pvsim_no__c</fullName>
        <description>coming from price list</description>
        <label>Inv2 pvsim no</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inv3_pvsim_no__c</fullName>
        <description>coming from price list</description>
        <label>Inv3 pvsim no</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Islocked__c</fullName>
        <formula>IF( Locked_Scenario__r.Is_Locked__c , &quot;Checked&quot;, &quot;Unchecked&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Islocked</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Doc_Signed_1__c</fullName>
        <formula>IF( Locked_Scenario__r.Lease_Doc_Signed__c , 
&apos;True&apos;, 
&apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lease Doc Signed1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Doc_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Doc_Terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease Doc Terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Implied_Rate_A__c</fullName>
        <label>Lease Implied Rate A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Implied_Rate_B__c</fullName>
        <label>Lease Implied Rate B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Implied_Rate_C__c</fullName>
        <label>Lease Implied Rate C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Number__c</fullName>
        <formula>Locked_Scenario__r.Consolidated_Lease_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_to_be_Amended__c</fullName>
        <label>Lease  # to be Amended</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lessee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lessee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quote Summaries</relationshipLabel>
        <relationshipName>Quote_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked_Scenario_Formula__c</fullName>
        <formula>Locked_Scenario__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locked Scenario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked_Scenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locked Scenario1</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Quote.Is_Locked__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Summaries</relationshipLabel>
        <relationshipName>Quote_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <formula>Locked_Scenario__r.Is_Locked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module1_AC_rating__c</fullName>
        <inlineHelpText>Item(Inventory Category 3)
* Quote(Modules Per String)
* Quote(Total Parallel Strings)
/ 1000</inlineHelpText>
        <label>Module1 AC rating</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module1_DC_rating__c</fullName>
        <label>Module1 DC rating</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module2_AC_rating__c</fullName>
        <label>Module2 AC rating</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module2_DC_rating__c</fullName>
        <label>Module2 DC rating</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module3_AC_rating__c</fullName>
        <label>Module3 AC rating</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module3_DC_rating__c</fullName>
        <label>Module3 DC rating</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Rent_A__c</fullName>
        <label>Monthly Rent A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Rent_B__c</fullName>
        <label>Monthly Rent B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Rent_C__c</fullName>
        <label>Monthly Rent C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mount_calculation_factor__c</fullName>
        <defaultValue>0</defaultValue>
        <description>comes from pricelist</description>
        <inlineHelpText>&quot;Module Count&quot; depends on Quantity &amp; SmartPack on Price List Item.</inlineHelpText>
        <label>Mount calculation factor inv1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mount_calculation_factor_inv2__c</fullName>
        <label>Mount calculation factor inv2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mount_calculation_factor_inv3__c</fullName>
        <label>Mount calculation factor inv3</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mount_calculation_factor_inv4__c</fullName>
        <label>Mount calculation factor inv4</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Quote_Lease_Number__c</fullName>
        <label>New Quote Lease Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NonSpwrDiscount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Discount for Dealers using Non Sunpower Mount</description>
        <label>NonSpwrDiscount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Lease_Number__c</fullName>
        <label>Revision to Lease Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a self Lookup field on Quote Summary. Where user can choose the old quote in order to relate the new quote with old quote.</description>
        <label>Revision to</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Quote_Summary__c.Account_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote_Summary__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quote Summaries</relationshipLabel>
        <relationshipName>Quote_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origination_CEILING_Dealer_Fees_x_0_30__c</fullName>
        <formula>CEILING(Total_System_Price_Dealer_Cost__c * 0.30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origination (CEILING(Dealer Fees x 0.30)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_30KW_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override 30KW Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_PSR_Id__c</fullName>
        <description>It&apos;s field created to reduce the query in trigger and assign the PSR value through field instead of querying the related account</description>
        <formula>Account_Name__r.Partner_Account__r.Primary_PSR__c</formula>
        <label>Primary PSR Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_PSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary PSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Monitoring_Kit_Fronius__c</fullName>
        <label>Production Monitoring Kit (Fronius)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Production_Monitoring_Kit_SMA__c</fullName>
        <label>Production Monitoring Kit (SMA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Production_Monitoring_Kit__c</fullName>
        <label>Production Monitoring Kit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QNCloned__c</fullName>
        <label>QNCloned</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Description__c</fullName>
        <formula>Locked_Scenario__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <description>This field is created as part of Sunpower branded Loan project to show Quote Type in the quotes related list of partners Account screen</description>
        <formula>TEXT(Locked_Scenario__r.QuoteType__c)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_View__c</fullName>
        <formula>HYPERLINK(&quot;/apex/SummariseQuote? &amp;id=&quot; &amp;  Id , &quot;Quote View&quot;, &quot;_blank&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Summaries (Quote)</relationshipLabel>
        <relationshipName>Quote_Summaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Racking_Non_Smart_Amount__c</fullName>
        <label>Racking Non Smart Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Racking_Smart_Mount_EC_Kit__c</fullName>
        <label>Racking Smart Mount EC Kit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Racking_Smart_Mount_FL_Kit__c</fullName>
        <label>Racking Smart Mount FL Kit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Racking_Smart_Mount_MC_Kit__c</fullName>
        <label>Racking Smart Mount MC Kit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Required_System_Price_A__c</fullName>
        <label>Required System Price_A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Required_System_Price_B__c</fullName>
        <label>Required System Price_B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Required_System_Price_C__c</fullName>
        <label>Required System Price_C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revision_Amendment_to_Lease__c</fullName>
        <formula>IF( Lease_Doc_Signed_1__c = &apos;True&apos; , &apos;&apos; , TEXT( Ammendment__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revision/ Amendment to Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate__c</fullName>
        <label>Sales Tax Rate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Abbreviation__c</fullName>
        <label>State Abbreviation</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Cost__c</fullName>
        <inlineHelpText>This is related Quote&apos;s &quot;System Cost&quot; value.</inlineHelpText>
        <label>System Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Size_c__c</fullName>
        <label>System_Size__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_ABC_Lease_System_Cost__c</fullName>
        <formula>Total_Equipment_Cost__c   +   Total_System_Price_Dealer_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ABC Lease System Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Dealer_Cost__c</fullName>
        <formula>Dealer_Cost_PV_Modules__c + Dealer_Cost_Consumption_Monitoring_Kit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Dealer Cost PV Modules + Dealer Cost/Consumption Monitoring Kit</inlineHelpText>
        <label>Total Dealer Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Equipment_Cost__c</fullName>
        <formula>Equipment_Cost_PV_Modules__c + Equipment_Cost_Inverters_Roof1__c + Equipment_Cost_Inverters_Roof2__c + Equipment_Cost_Inverters_Roof3__c + Equipment_Cost_Inverters_Roof4__c + Racking_Non_Smart_Amount__c + Racking_Smart_Mount_EC_Kit__c + Racking_Smart_Mount_FL_Kit__c + Racking_Smart_Mount_MC_Kit__c + Production_Monitoring_Kit__c + Production_Monitoring_Kit_Fronius__c + Production_Monitoring_Kit_SMA__c + Equip_Cost_Consumption_Monitoring_Kit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sunpower Equipment Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_System_Price_Dealer_Cost__c</fullName>
        <formula>CEILING(System_Cost__c - Total_Dealer_Cost__c - NonSpwrDiscount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System Cost - Total Dealer Cost</inlineHelpText>
        <label>Dealer Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Up_front_Rebate__c</fullName>
        <label>Up front Rebate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Quote__c</fullName>
        <formula>image(&quot;/servlet/servlet.FileDownload?file=015V0000000DWix&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Quote</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yr1_Savings_A__c</fullName>
        <label>Yr1 Savings_A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yr1_Savings_B__c</fullName>
        <label>Yr1 Savings_B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yr1_Savings_C__c</fullName>
        <label>Yr1 Savings_C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ac_rating__c</fullName>
        <description>calculated from priclist</description>
        <label>ac rating</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dc_rating__c</fullName>
        <description>calculated from priclist</description>
        <label>dc rating</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mark1__c</fullName>
        <label>mark1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modole_pvsim_no__c</fullName>
        <label>modole pvsim no</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Quote Summary</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Quote</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Comments_required_for_Lease_Amendment</fullName>
        <active>true</active>
        <description>When requesting the Lease Amendment,Reason needs to be provided for Revision</description>
        <errorConditionFormula>AND( 

NOT(ISPICKVAL( Ammendment__c , &apos;&apos;)), 
OR(ISBLANK( Comments__c)),
$User.Id != &apos;00580000003aECR&apos;, 
$User.ProfileId != &apos;00e80000000tepU&apos; 

)</errorConditionFormula>
        <errorMessage>Please provide the reason for the change being requested in the Reason for Amendment box below</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Either_Revision_OR_Amendment</fullName>
        <active>true</active>
        <description>Added bypass for FMW Integration User and System Administrator profile for case 00355796.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL( Ammendment__c , &apos;&apos; )), Old_Quote__c &lt;&gt; &apos;&apos;, $User.Id != &apos;00580000003aECR&apos;, $User.ProfileId != &apos;00e80000000tepU&apos;)</errorConditionFormula>
        <errorMessage>Please enter value Either for Revision to OR Amendment Type</errorMessage>
    </validationRules>
</CustomObject>